      - Selecting more common sample rates (other than 31400) now works
        much better, but there are still a few ROMS (like Quadrun) where
        31400Hz still works best.

  * Many changes to handling ZIP archives:
      - Files in multiple levels are now recognized.  This fixes issues
        in Windows where such files couldn't be loaded at all, and in all
        systems where ROMs with the same name (but different directories)
        weren't being recognized.
      - ZIP contents are now handled more intelligently.  Archives
        containing only one ROM are automatically loaded, whereas those
        with multiple files are treated as directories.
      - Opening an archive from the commandline now works as in the UI,
        where opening a multi-ROM archive will pop up the UI and show the
        archive contents (as a directory).
      - The ZIP code behind the scenes is now much faster by making use
        of caching (the old code was actually from 1998!).
      - This new 'archive' infrastructure may eventually lead to 7-Zip
        support, as well as 'virtual' formats (such as showing the list
        of files for 2in1/4in1/8in1/etc within the UI.

  * Improved bankswitch autodetection for X07 ROMs (although there's only
    two known ROMs in existence, so the detection probably isn't robust).

  * Tweaked bankswitch autodetection for the 0840, F8 and FE schemes;
    several homebrews that didn't run before now work correctly.

  * Fixed regression in RIOT INTIM reads; at least one known ROM
    (Mr. Roboto Berzerk hack) wasn't working properly.

  * Added support for different directories for saving/loading PNG
    files.  These are set with the 'snapsavedir' and 'snaploaddir'
    commandline arguments (which replace the old 'snapdir'), and are
    also available within the UI.

  * Updated included PNG and ZLIB libraries to latest stable version.

-Have fun!


3.7.4 to 3.7.5: (December 22, 2012)
